fix z-index layering issue

--- a/client/homebrew/editor/snippetbar/snippetbar.less
+++ b/client/homebrew/editor/snippetbar/snippetbar.less
@@ -82,7 +82,7 @@
 			position : absolute;
 			top : 25px;
 			right : 0;
-			z-index : 1;
+			z-index : 10;
 			display : flex;
 			align-items : center;
 			justify-content : center;
